// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <td
      class="MuiTableCell-root PicassoTableCell-root"
    >
      Cell
    </td>
  </div>
</div>
`;

exports[`TableCell renders compact 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <td
      class="MuiTableCell-root PicassoTableCell-root PicassoTableCell-compact"
    >
      Cell
    </td>
  </div>
</div>
`;

exports[`TableCell renders narrow 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <td
      class="MuiTableCell-root PicassoTableCell-root PicassoTableCell-narrow"
    >
      Cell
    </td>
  </div>
</div>
`;
